# dogoap

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build-wasm-examples.sh  rust-toolchain.toml
.github/workflows/: ci.yml  wasm-examples.yml
crates/bevy_dogoap/: Cargo.toml  README.md
crates/bevy_dogoap/examples/: bevy_basic.rs  cells.rs  miner.rs  moving_transform.rs  resman.rs  sneaky.rs  test_lag.rs  traits_galore.rs  von_neumann.rs
crates/bevy_dogoap/old_examples/: cells.rs  resman.rs  test_lag.rs  traits_galore.rs
crates/bevy_dogoap/src/: lib.rs  macros.rs  planner.rs  plugin.rs  prelude.rs  traits.rs
crates/bevy_dogoap/tests/: basic.rs  basic_external.rs  basic_internal.rs
crates/dogoap/: Cargo.toml  README.md
crates/dogoap/benches/: long_plan.rs
crates/dogoap/examples/: basic.rs  long_plan.rs  simple.rs
crates/dogoap/src/: action.rs  compare.rs  datum.rs  effect.rs  field.rs  goal.rs  lib.rs  localstate.rs  mutator.rs  planner.rs  prelude.rs  simple.rs  state.rs
crates/dogoap/tests/: tests.rs
crates/dogoap_macros/: Cargo.toml
crates/dogoap_macros/src/: lib.rs
crates/dsl/: Cargo.toml  README.md
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
docs/: 01-overview.md  06-glossary.md
web-src/: app.js  index.html  style.css
