[package]
name = "bevy_dogoap"
version = "0.2.0"
edition = "2021"
description = "bevy_dogoap"
license = "MIT"
homepage = "https://github.com/victorb/dogoap"

[features]
default = ["compute-pool"]
compute-pool = []

[dependencies]
bevy = { version = "0.14.0", default-features = false, optional = false, features = ["wayland", "bevy_gizmos", "bevy_text", "multi_threaded", "default_font", "webgl2"]}
bevy-trait-query-0-14-0 = { version = "0.6.2" }
dogoap = { path = "../dogoap", version = "0.2.0"}
dogoap_macros = { path = "../dogoap_macros", version = "0.2.0"}
rand = "0.8.5"
